Fix: Use Arrays.asList for CORS configuration (more reliable)